--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lottie-ios": "3.1.8",
     "lottie-react-native": "^3.5.0",
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "react-native-onboarding-swiper": "^1.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
